slide content에 노출 순서를 설정합니다.(with Netlify CMS)

--- a/content/slides/4.md
+++ b/content/slides/4.md
@@ -1,4 +1,5 @@
 ---
+weight: 4
 button_url: null
 summary: "메인 슬라이드 요약 "
 upper_message: null
@@ -8,4 +9,3 @@ button_name: null
 sub_title: null
 image: images/slides/slide-003.png
 ---
-메인 슬라이드 노출 영역입니다.
