Update 메인 슬라이드 “1”

--- a/content/slides/1.md
+++ b/content/slides/1.md
@@ -4,7 +4,7 @@ upper_message: 2020년 8월 17일 - 11월 27일
 title: 그날의 목소리
 sub_title: 故김학순 공개증언 30주년 기념전시(편집)
 date: 2021-08-23T20:36:03+09:00
-image: /images/slides/slide-005.png
+image: /img/홈페이지-박물관-슬라이드-006.png
 button_name: 전시소개 보기
 button_url: /exhibitions/ex-01/
 ---
