Update 메인 슬라이드 “2”

--- a/content/slides/2.md
+++ b/content/slides/2.md
@@ -1,10 +1,10 @@
 ---
 weight: 2
-upper_message:
-title: 정기후원
-sub_title: 전쟁과여성인권박물관에 별도로 정기후원을 신청할 수 있습니다 !!
+upper_message: null
+title: 후원회원이 되어주세요
+sub_title: 전쟁과여성인권박물관은 시민의 힘으로 운영됩니다
 date: 2021-08-23T20:36:03+09:00
-image: images/slides/slide-004.png
-button_name: 후원하기
+image: /img/홈페이지-박물관-슬라이드-005.png
+button_name: 지금 후원하기
 button_url: /news/museum-donation/
 ---
