--- a/content/slides/3.md
+++ b/content/slides/3.md
@@ -2,7 +2,7 @@
 weight: 3
 upper_message: 세계시민과함께외치는
 title: 여성 인권 평화
-sub_title: 전쟁과여성인권박물관은 일본군 '위안부'생존자들이 겪었던 역사를 기억하고 교육하는 공간입니다
+sub_title: 일본군 '위안부'생존자들이 겪었던 역사를 기억하고 교육하는 공간
 date: 2021-08-23T20:36:03+09:00
 image: /img/홈페이지-박물관-슬라이드-007.png
 button_name: 박물관 소개
