Update 메인 슬라이드 “3”

--- a/content/slides/3.md
+++ b/content/slides/3.md
@@ -1,6 +1,6 @@
 ---
 weight: 3
-upper_message: 세계 시민과 함께 외치는
+upper_message: 세계 시민과 함께 외치는-
 title: 여성 인권 평화
 sub_title: 일본군 '위안부'생존자들이 겪었던 역사를 기억하고 교육하는 공간
 date: 2021-08-23T20:36:03+09:00
