--- a/content/slides/2.md
+++ b/content/slides/2.md
@@ -1,8 +1,8 @@
 ---
 weight: 2
-upper_message: 전쟁과여성인권박물관은 오롯이 시민의 힘으로만 운영됩니다
+upper_message: 시민의 힘으로 운영되는 박물관
 title: 후원회원이 되어주세요
-sub_title: 후원 회원에게는 마스크(스트랩 포함)/나비배지/전시 무료 관람권/박물관 자료 열람권 등이 제공됩니다
+sub_title: 후원회원에게는 마스크(스트랩 포함) / 나비배지 / 전시 무료 관람권 / 박물관 자료 열람권 등이 제공됩니다
 date: 2021-08-23T20:36:03+09:00
 image: /img/홈페이지-박물관-슬라이드-005.png
 button_name: 지금 후원하기
