불필요한 공지사항을 정리하고 테마를 업데이트합니다.

--- a/content/connect/notice/2.md
+++ b/content/connect/notice/2.md
@@ -3,7 +3,7 @@ title: 전쟁과여성인권박물관 아카이브의 제목이 들어가는 영
 date: 2021-08-23T20:36:03+09:00
 author: 관리자
 home_sticky: false
-pinned: true
+pinned: false
 ---
 
 Reprehenderit incididunt sint nisi laboris ad commodo duis esse incididunt. Ea in laboris veniam excepteur nulla ex id proident enim duis Lorem laboris ad esse. Deserunt minim nostrud deserunt dolore pariatur duis velit id elit esse quis nulla nisi voluptate. Cupidatat pariatur Lorem nisi adipisicing eu. Eiusmod consequat minim sunt non consequat ad occaecat sunt irure consectetur dolore ex reprehenderit. Amet officia pariatur deserunt reprehenderit adipisicing qui in sunt ea est esse cupidatat reprehenderit non. Aute consectetur non nostrud duis ipsum adipisicing ad labore veniam.
