--- a/content/items/ex-02/생애관/할머니들/이막달.md
+++ b/content/items/ex-02/생애관/할머니들/이막달.md
@@ -4,7 +4,7 @@ date:
 draft: 
 media_type: 
 title: 이막달
-description: 
+description: 1923년 경상남도 산청출생 / 18세에 연행되어 대만 기륭에서 일본군성노예생활
 modified_at: 
 created_at: 
 public_access_status: 
