--- a/content/items/ex-02/생애관/할머니들/이수산.md
+++ b/content/items/ex-02/생애관/할머니들/이수산.md
@@ -4,7 +4,7 @@ date:
 draft: 
 media_type: 
 title: 이수산
-description: 
+description: 1928년 경상북도 영일 출생 / 17세에 연행되어 중국 목단강에서 일본군성노예생활
 modified_at: 
 created_at: 
 public_access_status: 
