--- a/content/items/ex-02/생애관/할머니들/이순덕.md
+++ b/content/items/ex-02/생애관/할머니들/이순덕.md
@@ -4,7 +4,7 @@ date:
 draft: 
 media_type: 
 title: 이순덕
-description: 
+description: 1918 전라북도 김제 출생 /18세 때 연행되어 중국 상해에서 일본군성노예생활
 modified_at: 
 created_at: 
 public_access_status: 
