--- a/content/items/ex-02/생애관/할머니들/이용녀.md
+++ b/content/items/ex-02/생애관/할머니들/이용녀.md
@@ -4,7 +4,7 @@ date:
 draft: 
 media_type: 
 title: 이용녀
-description: 
+description: 1926년 경기도 여주 출생 / 17세에 연행되어 미얀마(버마)에서 일본군성노예생활
 modified_at: 
 created_at: 
 public_access_status: 
