--- a/content/items/ex-02/생애관/할머니들/정서운.md
+++ b/content/items/ex-02/생애관/할머니들/정서운.md
@@ -4,7 +4,7 @@ date:
 draft: 
 media_type: 
 title: 정서운
-description: 
+description: 1924년 경상남도 하동 출생 /18세에 연행되어 인도네시아 스마랑에서 일본군성노예생활
 modified_at: 
 created_at: 
 public_access_status: 
