--- a/content/items/ex-02/생애관/할머니들/최갑순.md
+++ b/content/items/ex-02/생애관/할머니들/최갑순.md
@@ -4,7 +4,7 @@ date:
 draft: 
 media_type: 
 title: 최갑순
-description: 
+description: 1919년 전라남도 구례 출생 / 15세에 연행되어 중국 동안성에서 일본군성노예생활
 modified_at: 
 created_at: 
 public_access_status: 
