--- a/content/items/ex-02/생애관/할머니들/황금주.md
+++ b/content/items/ex-02/생애관/할머니들/황금주.md
@@ -4,7 +4,7 @@ date:
 draft: 
 media_type: 
 title: 황금주
-description: 
+description: 1922년 충청남도 부여 출생 /20세에 연행되어 중국 길림성에서 일본군성노예 생활
 modified_at: 
 created_at: 
 public_access_status: 
