--- a/content/items/ex-02/생애관/할머니들/황순이.md
+++ b/content/items/ex-02/생애관/할머니들/황순이.md
@@ -4,7 +4,7 @@ date:
 draft: 
 media_type: 
 title: 황순이
-description: 
+description: 1922년 경상남도 하동 출생 /. 3세에 연행되어 몽골, 홍콩, 싱가포르에서 일본군성노예생활
 modified_at: 
 created_at: 
 public_access_status: 
