--- a/content/items/ex-02/역사관/완_외상사진과 김은례할머니 진단서/외상사진 추가_김은례.md
+++ b/content/items/ex-02/역사관/완_외상사진과 김은례할머니 진단서/외상사진 추가_김은례.md
@@ -4,7 +4,7 @@ date:
 draft: 
 media_type: 
 title: 외상사진 추가_김은례
-description: 
+description: 김은례는 위안소에서 당한 폭력으로 어깨가 탈구되고 난청을 얻었다.
 modified_at: 
 created_at: 
 public_access_status: 
