--- a/content/items/ex-02/역사관/완_외상사진과 김은례할머니 진단서/정옥순-일본군이 새긴 입묵.md
+++ b/content/items/ex-02/역사관/완_외상사진과 김은례할머니 진단서/정옥순-일본군이 새긴 입묵.md
@@ -4,7 +4,7 @@ date:
 draft: 
 media_type: 
 title: 정옥순-일본군이 새긴 입묵
-description: 
+description: "'위안부'피해자들의 몸에 남은 상처"
 modified_at: 
 created_at: 
 public_access_status: 
