--- a/content/items/ex-02/역사관/완_위안소/사진.md
+++ b/content/items/ex-02/역사관/완_위안소/사진.md
@@ -3,8 +3,8 @@ reference_code:
 date: 
 draft: 
 media_type: 
-title: 사진
-description: 
+title: 위안소 사진
+description: 위안소로 사용된 건물과 위안소 내부
 modified_at: 
 created_at: 
 public_access_status: 
