--- a/content/items/ex-02/역사관/완_위안소/조선인[위안부]가 계신던 집-마츠시로.md
+++ b/content/items/ex-02/역사관/완_위안소/조선인[위안부]가 계신던 집-마츠시로.md
@@ -4,7 +4,7 @@ date:
 draft: 
 media_type: 
 title: 조선인[위안부]가 계신던 집-마츠시로
-description: 
+description: "'위안소'로 사용된 건물"
 modified_at: 
 created_at: 
 public_access_status: 
