--- a/content/items/ex-02/역사관/완_하야오 논문/하야오 논문-17.md
+++ b/content/items/ex-02/역사관/완_하야오 논문/하야오 논문-17.md
@@ -3,8 +3,8 @@ reference_code:
 date: 
 draft: 
 media_type: 
-title: 하야오 논문-17
-description: 
+title: 하야오 도라오 논문-17
+description: ...군당국은 군인의 성욕은 억제 불가능이라 하여 중국 부인을 강간하지 않도록 위안소를 설치했다...(1939년 군의관 하야오 도라오 중위의 논문 중)
 modified_at: 
 created_at: 
 public_access_status: 
