--- a/content/archive/featured/1.md
+++ b/content/archive/featured/1.md
@@ -1,11 +1,10 @@
 ---
 title: 1992년 수요시위 톺아보기
 date: 2021-12-21T15:06:41.018Z
-summary: 1992년 1월 8일, 미야자와 전 일본 총리의 방한을 앞두고 수요시위는 시작되었습니다.   위안부 문제가 해결될 때까지
-  계속하기로 결의한 수요시위는 어느새 1500차를 맞이하였습니다.
+summary: 1992년 1월 8일, 미야자와 전 일본 총리의 방한을 앞두고 수요시위는 시작되었습니다. 위안부 문제가 해결될 때까지 계속하기로 결의한 수요시위는 어느새 1500차를 맞이하였습니다.
 image: https://durumi.io/cdn-cgi/image/fit=scale-down,width=1920/https://wwm3.s3.ap-northeast-2.amazonaws.com/exhibition/2%ec%b8%b5+%ec%a0%84%ec%8b%9c/%ec%9a%b4%eb%8f%99%ec%82%ac%ea%b4%80/%ec%b9%a8%eb%ac%b5%ec%9d%84%ea%b9%a8%ed%8a%b8%eb%a6%ac%eb%8b%a4/%ec%b2%ab%ec%88%98%ec%9a%94%ec%a7%91%ed%9a%8c+%ec%82%ac%eb%b3%b8.jpg
 home_sticky: false
-pinned: true
+pinned: false
 ---
 여러분은 ‘수요시위’하면 무엇이 생각나시나요? 노란색? 일본군‘위안부’ 피해당사자? 평화로?
 
@@ -13,7 +12,8 @@ pinned: true
 
 여러분의 기억 속에 함께하기까지 1500번의 수요일을 지나왔습니다.
 
-![수요시위](https://durumi.io/cdn-cgi/image/fit=scale-down,width=1920/https://wwm3.s3.ap-northeast-2.amazonaws.com/exhibition/2%ec%b8%b5+%ec%a0%84%ec%8b%9c/%ec%9a%b4%eb%8f%99%ec%82%ac%ea%b4%80/%ec%b9%a8%eb%ac%b5%ec%9d%84%ea%b9%a8%ed%8a%b8%eb%a6%ac%eb%8b%a4/%ec%b2%ab%ec%88%98%ec%9a%94%ec%a7%91%ed%9a%8c+%ec%82%ac%eb%b3%b8.jpg "수요시위")
+
+
 
 1992년 1월 8일, 미야자와 전 일본 총리의 방한을 앞두고 수요시위는 시작되었습니다. 
 
@@ -29,4 +29,4 @@ pinned: true
 
 2021년, 수요일 12시 평화로에서의 약속은 아직 계속되고 있습니다.
 
-![세상에서 가장 오래된 시위, 수요시위](/img/이달의기록_수요시위-사진.jpg "세상에서 가장 오래된 시위, 수요시위")
+![수요시위](https://durumi.io/cdn-cgi/image/fit=scale-down,width=1920/https://wwm3.s3.ap-northeast-2.amazonaws.com/exhibition/2%ec%b8%b5+%ec%a0%84%ec%8b%9c/%ec%9a%b4%eb%8f%99%ec%82%ac%ea%b4%80/%ec%b9%a8%eb%ac%b5%ec%9d%84%ea%b9%a8%ed%8a%b8%eb%a6%ac%eb%8b%a4/%ec%b2%ab%ec%88%98%ec%9a%94%ec%a7%91%ed%9a%8c+%ec%82%ac%eb%b3%b8.jpg "수요시위")
