--- a/content/items/ex-02/생애관/할머니들/이옥선.md
+++ b/content/items/ex-02/생애관/할머니들/이옥선.md
@@ -4,7 +4,7 @@ date:
 draft: 
 media_type: 
 title: 이옥선
-description: 
+description: 1927년 부산 출생 / 16세에 연행되어 중국 연길에서 일본군성노예생활
 modified_at: 
 created_at: 
 public_access_status: 
