--- a/content/items/ex-02/생애관/할머니들/하상숙.md
+++ b/content/items/ex-02/생애관/할머니들/하상숙.md
@@ -4,7 +4,7 @@ date:
 draft: 
 media_type: 
 title: 하상숙
-description: 
+description: 1928년 충청남도 서산 출생 /17세에 연행되어 중국 적경리 위안소에서 일본군성노예생활
 modified_at: 
 created_at: 
 public_access_status: 
