--- a/content/items/ex-02/역사관/완_외상사진과 김은례할머니 진단서/속리산, 길갑순 할머니 - 인두로 지진 상처1.md
+++ b/content/items/ex-02/역사관/완_외상사진과 김은례할머니 진단서/속리산, 길갑순 할머니 - 인두로 지진 상처1.md
@@ -3,8 +3,8 @@ reference_code:
 date: 
 draft: 
 media_type: 
-title: 속리산, 길갑순 할머니 - 인두로 지진 상처1
-description: 
+title: 속리산, 길갑순 할머니 - 인두로 지진 상처 
+description: "'위안부'피해자들의 몸에 남은 상처"
 modified_at: 
 created_at: 
 public_access_status: 
