--- a/content/items/ex-02/운동사관/침묵을깨트리다/첫수요집회 사본.md
+++ b/content/items/ex-02/운동사관/침묵을깨트리다/첫수요집회 사본.md
@@ -3,8 +3,8 @@ reference_code:
 date: 
 draft: 
 media_type: 
-title: 첫수요집회 사본
-description: 
+title: 첫 수요집회 1992년 1월 8일
+description: "제1차 일본군'위안부'문제 해결을 위한 수요시위"
 modified_at: 
 created_at: 
 public_access_status: 
