--- a/content/connect/notice/11.md
+++ b/content/connect/notice/11.md
@@ -1,5 +1,5 @@
 ---
-title: 특별전시 연장안내 [~2022.1 .22]
+title: "특별전시 연장안내 [~2022.1 .22]"
 date: 2021-08-23T20:36:03+09:00
 author: 관리자
 image: /img/thumb-2948721989_xfpumhyc_67e351d0aa8c5b71aeb92307d81aca457d27af1b_835x835.jpeg
@@ -7,5 +7,5 @@ home_sticky: true
 pinned: false
 ---
 특별전시 <그날의 목소리>가 많은 분들의 성원에 힘입어 2022년 1월 22일까지 연장됩니다.\
- 이번 전시는 김학순 공개증언 30주년 기념으로 개최되었으며, 전시 공간에서 김학순의 삶과 목소리, 그리고 현재까지 이어지는 연대의 힘을 느낄 수 있습니다.\
+이번 전시는 김학순 공개증언 30주년 기념으로 개최되었으며, 전시 공간에서 김학순의 삶과 목소리, 그리고 현재까지 이어지는 연대의 힘을 느낄 수 있습니다.\
 특별전시 <그날의 목소리>에 많은 관심과 참여 부탁드립니다!
