잘 못 된 url 경로를 수정합니다.

--- a/content/slides/3.md
+++ b/content/slides/3.md
@@ -6,5 +6,5 @@ sub_title: 일본군 '위안부'생존자들이 겪었던 역사를 기억하고
 date: 2021-08-23T20:36:03+09:00
 image: /img/홈페이지-박물관-슬라이드-007.png
 button_name: 박물관 소개 보기
-button_url: /exhibitions/ex-01/
+button_url: /about/greetings/
 ---
