--- a/content/slides/1.md
+++ b/content/slides/1.md
@@ -6,5 +6,5 @@ sub_title: 故김학순 공개증언 30주년 기념전
 date: 2021-08-23T20:36:03+09:00
 image: /img/홈페이지-박물관-슬라이드-006-1-.png
 button_name: 전시소개 보기
-button_url: /exhibitions/ex-01/
+button_url: /exhibition
 ---
