--- a/content/connect/notice/3.md
+++ b/content/connect/notice/3.md
@@ -3,9 +3,11 @@ title: 홈페이지 개편 및 안정화 기간(~21.01.15)
 date: 2021-08-23T20:36:03+09:00
 author: 관리자
 summary: ""
-home_sticky: false
-pinned: false
+home_sticky: true
+pinned: true
 ---
 현재 홈페이지 개편 후 후속 페이지의 오픈 및 콘텐츠를 정비하고 있습니다. 
+
+사용에 불편함이 있을 수 있으니, 양해바랍니다.
 
 2021년 1월 15일까지
