Update 공지사항 “모집-2022년-상반기-자원활동가-모집-안내”

--- a/content/connect/notice/모집-2022년-상반기-자원활동가-모집-안내.md
+++ b/content/connect/notice/모집-2022년-상반기-자원활동가-모집-안내.md
@@ -44,7 +44,7 @@ pinned: true
 
 \
  6. 지원방법\
-    - 자원활동 지원서를 다운 받은 후 작성하여 이메일로 제출\
+    - 아래 구글 드라이브에 자원활동 지원서를 다운 받은 후 작성하여 이메일로 제출<https://drive.google.com/drive/u/3/folders/0AMGjtUNbGhBtUk9PVA>\
     - 이메일 : [museum@womenandwar.net](mailto:museum@womenandwar.net)
 
 * #### 문의 : 전쟁과여성인권박물관 02-392-5252
