Update 공지사항 “모집-2022년-상반기-자원활동가-모집-안내”

--- a/content/connect/notice/모집-2022년-상반기-자원활동가-모집-안내.md
+++ b/content/connect/notice/모집-2022년-상반기-자원활동가-모집-안내.md
@@ -1,5 +1,6 @@
 ---
 title: "[모집] 2022년 상반기 자원활동가 모집 안내"
+author: 관리자
 date: 2021-12-30T05:03:13.893Z
 image: /img/제목을-입력해주세요_-001-복사본.png
 home_sticky: true
@@ -44,7 +45,9 @@ pinned: true
 
 \
  6. 지원방법\
-    - 아래 구글 드라이브에 자원활동 지원서를 다운 받은 후 작성하여 이메일로 제출<https://drive.google.com/drive/u/3/folders/0AMGjtUNbGhBtUk9PVA>\
+    - 첨부링크에 자원활동 지원서를 다운 받은 후 작성하여 이메일로 제출[](https://drive.google.com/drive/u/3/folders/0AMGjtUNbGhBtUk9PVA)
+
+[<https://drive.google.com/file/d/1xQlctVE8t2nPZYF6pqIH3aO6Tppl-9DP/view?usp=sharing>](<https://drive.google.com/file/d/1xQlctVE8t2nPZYF6pqIH3aO6Tppl-9DP/view?usp=sharing>)\
     - 이메일 : [museum@womenandwar.net](mailto:museum@womenandwar.net)
 
 * #### 문의 : 전쟁과여성인권박물관 02-392-5252
