Update 메인 슬라이드 “1”

--- a/content/slides/1.md
+++ b/content/slides/1.md
@@ -1,6 +1,6 @@
 ---
 weight: 1
-upper_message: 2020년 8월 17일 - 11월 27일
+upper_message: 2021년 8월 17일 - 2022년 11월 27일
 title: 그날의 목소리
 sub_title: 故김학순 공개증언 30주년 기념전
 date: 2021-08-23T20:36:03+09:00
