--- a/content/archive/featured/1.md
+++ b/content/archive/featured/1.md
@@ -2,7 +2,7 @@
 title: 1992년 수요시위 톺아보기
 date: 2021-12-21T15:06:41.018Z
 summary: 1992년 1월 8일, 미야자와 전 일본 총리의 방한을 앞두고 수요시위는 시작되었습니다. 위안부 문제가 해결될 때까지 계속하기로 결의한 수요시위는 어느새 1500차를 맞이하였습니다.
-image: https://durumi.io/cdn-cgi/image/fit=scale-down,width=1920/https://wwm3.s3.ap-northeast-2.amazonaws.com/exhibition/2%ec%b8%b5+%ec%a0%84%ec%8b%9c/%ec%9a%b4%eb%8f%99%ec%82%ac%ea%b4%80/%ec%b9%a8%eb%ac%b5%ec%9d%84%ea%b9%a8%ed%8a%b8%eb%a6%ac%eb%8b%a4/%ec%b2%ab%ec%88%98%ec%9a%94%ec%a7%91%ed%9a%8c+%ec%82%ac%eb%b3%b8.jpg
+image: https://wwm3.s3.ap-northeast-2.amazonaws.com/exhibition/ex-02/운동사관/침묵을깨트리다/첫수요집회+사본.jpg
 home_sticky: false
 pinned: false
 ---
@@ -29,4 +29,4 @@ pinned: false
 
 2021년, 수요일 12시 평화로에서의 약속은 아직 계속되고 있습니다.
 
-![수요시위](https://durumi.io/cdn-cgi/image/fit=scale-down,width=1920/https://wwm3.s3.ap-northeast-2.amazonaws.com/exhibition/2%ec%b8%b5+%ec%a0%84%ec%8b%9c/%ec%9a%b4%eb%8f%99%ec%82%ac%ea%b4%80/%ec%b9%a8%eb%ac%b5%ec%9d%84%ea%b9%a8%ed%8a%b8%eb%a6%ac%eb%8b%a4/%ec%b2%ab%ec%88%98%ec%9a%94%ec%a7%91%ed%9a%8c+%ec%82%ac%eb%b3%b8.jpg "수요시위")
+![수요시위](https://wwm3.s3.ap-northeast-2.amazonaws.com/exhibition/ex-02/운동사관/침묵을깨트리다/첫수요집회+사본.jpg "수요시위")
