특별전시  / 메뉴를 추가합니다.

--- a/content/slides/1.md
+++ b/content/slides/1.md
@@ -5,6 +5,6 @@ title: 그날의 목소리
 sub_title: 故김학순 공개증언 30주년 기념전
 date: 2021-08-23T20:36:03+09:00
 image: /img/홈페이지-박물관-슬라이드-006-1-.png
-button_name: 전시소개 보기
-button_url: /exhibition
+button_name: 전시 보기
+button_url: /exhibition/ex-04/section-01/
 ---
