Update 공지사항 “모집-2022년-상반기-자원활동가-모집-안내”

--- a/content/connect/notice/모집-2022년-상반기-자원활동가-모집-안내.md
+++ b/content/connect/notice/모집-2022년-상반기-자원활동가-모집-안내.md
@@ -4,7 +4,7 @@ author: 관리자
 date: 2021-12-30T05:03:13.893Z
 image: /img/제목을-입력해주세요_-001-복사본.png
 home_sticky: true
-pinned: true
+pinned: false
 ---
 ## 전쟁과여성인권박물관 2022년 상반기 자원활동가 모집 안내
 
