--- a/content/items/ex-04/section-01-right/1_1981 끌려간사람들★.md
+++ b/content/items/ex-04/section-01-right/1_1981 끌려간사람들★.md
@@ -4,11 +4,11 @@ media_type:
 title: 1_1981 끌려간사람들★
 summary:
 image:
-description:
+description: 저작권문제로 비공개
 modified_at:
 created_at:
 components:
-- https://wwm3.s3.ap-northeast-2.amazonaws.com/exhibition/ex-04/section-01-right/1_1981+끌려간사람들★.jpg
+- 
 tags:
 -
 ---
