--- a/content/items/(3)2층/역사관/자료/LHS_0225.md
+++ b/content/items/(3)2층/역사관/자료/LHS_0225.md
@@ -1,10 +1,10 @@
 ---
 reference_code:
 media_type:
-title: LHS_0225
-summary:
+title: "위안소'난코쿠표(남국료)'출입증"
+summary: 붉은
 image:
-description:
+description: 
 modified_at:
 created_at:
 components:
