--- a/content/items/(3)2층/역사관/자료/LHS_0235.md
+++ b/content/items/(3)2층/역사관/자료/LHS_0235.md
@@ -1,8 +1,8 @@
 ---
 reference_code:
 media_type:
-title: LHS_0235
-summary:
+title: 출동군하사관병 위생수칙
+summary: 전염병 예방 항목 중 성병에 대한 주의사항이 있다.
 image:
 description:
 modified_at:
