--- a/content/items/(3)2층/역사관/자료/LHS_0238.md
+++ b/content/items/(3)2층/역사관/자료/LHS_0238.md
@@ -1,8 +1,8 @@
 ---
 reference_code:
 media_type:
-title: LHS_0238
-summary:
+title: 당시 군인이었던 무토 아키이치의 사진과 참전 당시의 일기장
+summary: 친구들과 위안소에 갔던 내용을 기술했다.
 image:
 description:
 modified_at:
