--- a/content/items/(3)2층/역사관/자료/LHS_0243.md
+++ b/content/items/(3)2층/역사관/자료/LHS_0243.md
@@ -1,8 +1,8 @@
 ---
 reference_code:
 media_type:
-title: LHS_0243
-summary:
+title: "필리핀 루손1포로수용소에 수용된 조선인'위안부'심문조서"
+summary: "포로수용소에 수용된 조선인 '위안부'를 심문하고 작성한 카드로 생년월일, 본적지, 연력, 키, 몸무게, 종교 등의 인적사항을 기록했다."
 image:
 description:
 modified_at:
