--- a/content/items/(3)2층/그림자료/LHS_0247.md
+++ b/content/items/(3)2층/그림자료/LHS_0247.md
@@ -1,8 +1,8 @@
 ---
 reference_code:
 media_type:
-title: LHS_0247
-summary:
+title: 빼앗긴 순정
+summary: 강덕경(1995) / 37cmX53cm / 색연필
 image:
 description:
 modified_at:
