--- a/content/items/(3)2층/그림자료/LHS_0257.md
+++ b/content/items/(3)2층/그림자료/LHS_0257.md
@@ -1,8 +1,8 @@
 ---
 reference_code:
 media_type:
-title: LHS_0257
-summary:
+title: 위안부 할머니II
+summary: 강현두(2008) / 73cmX54cm / 수채화
 image:
 description:
 modified_at:
