--- a/content/items/ex-02/역사관/완_강덕경할머니와 신문헤드/1. 강덕경.md
+++ b/content/items/ex-02/역사관/완_강덕경할머니와 신문헤드/1. 강덕경.md
@@ -2,7 +2,7 @@
 reference_code:
 media_type:
 title: 강덕경의 증언
-summary: ""열여섯 살 되는 1944년 6월경에 여자근로정신대 1기생으로 일본에 갔다. 밤이었다. 철조망을 쳐들고 나와 전에 도망갔던 데와 다른 방향으로 갔다. 그런데 공장에서 얼마 안 떨어진 곳에서 이리저리 헤매다가 군인에게 잡히고 말았다... 차를 타고가 부대에 도착했다... 하루에 10명 이내로 사람을 받았다..." : 강덕경의 경우 '여자정신근로령' 1호로 모집되어 비행기 공장으로 간 후 배고픔과 고된 일을 견디지 못해 탈출하였으나 군인에게 잡혀 '위안소'로 보내졌다."
+summary: "'열여섯 살 되는 1944년 6월경에 여자근로정신대 1기생으로 일본에 갔다. 밤이었다. 철조망을 쳐들고 나와 전에 도망갔던 데와 다른 방향으로 갔다. 그런데 공장에서 얼마 안 떨어진 곳에서 이리저리 헤매다가 군인에게 잡히고 말았다... 차를 타고가 부대에 도착했다... 하루에 10명 이내로 사람을 받았다...' : 강덕경의 경우 '여자정신근로령' 1호로 모집되어 비행기 공장으로 간 후 배고픔과 고된 일을 견디지 못해 탈출하였으나 군인에게 잡혀 '위안소'로 보내졌다."
 image:
 description:
 modified_at:
