--- a/content/items/ex-02/역사관/완_해군 위안소 기록/3. 해군위안소기록.md
+++ b/content/items/ex-02/역사관/완_해군 위안소 기록/3. 해군위안소기록.md
@@ -1,14 +1,15 @@
 ---
 reference_code:
 media_type:
-title: 3. 해군위안소기록
-summary:
+title: "해군'위안소'기록"
+summary: "'소화10년 재상해총영사관 경찰사무상황', 당시 해군'위안소' 14개가 있었음을 기록"
 image:
 description:
 modified_at:
 created_at:
 components:
 - https://wwm3.s3.ap-northeast-2.amazonaws.com/exhibition/ex-02/역사관/완_해군+위안소+기록/3.+해군위안소기록.jpg
+- https://wwm3.s3.ap-northeast-2.amazonaws.com/exhibition/ex-02/역사관/완_해군+위안소+기록/자료집성+1-407.jpg
 tags:
 -
 ---
