--- a/content/items/ex-02/역사관/완_군위안소 종업부 등 모집에 관한 건 및 도항허가/5. 도항허가.md
+++ b/content/items/ex-02/역사관/완_군위안소 종업부 등 모집에 관한 건 및 도항허가/5. 도항허가.md
@@ -1,8 +1,8 @@
 ---
 reference_code:
 media_type:
-title: 5. 도항허가
-summary:
+title: 도항허가
+summary: "'한구 육군 천야부대 '위안소'부녀 중국도항의 건', '위안부'여성들의 도항허가에 관한 군문서" 
 image:
 description:
 modified_at:
