Update 8. 김상희 위안소1.md

--- a/content/items/ex-02/역사관/완_김상희 위안소/8. 김상희 위안소1.md
+++ b/content/items/ex-02/역사관/완_김상희 위안소/8. 김상희 위안소1.md
@@ -1,8 +1,8 @@
 ---
 reference_code:
 media_type:
-title: 8. 김상희 위안소1
-summary:
+title: "김상희 '위안소'"
+summary: "피해생존자 김상희가 그린 '위안소'그림"
 image:
 description:
 modified_at:
