불필요한 타이틀 번호를 삭제합니다.

--- a/content/items/ex-04/section-01-left/2_제1차 한일정상회담에서 노태우 대통령과 가이후 총리.md
+++ b/content/items/ex-04/section-01-left/2_제1차 한일정상회담에서 노태우 대통령과 가이후 총리.md
@@ -1,7 +1,7 @@
 ---
 reference_code:
 media_type:
-title: 2_제1차 한일정상회담에서 노태우 대통령과 가이후 총리
+title: 제1차 한일정상회담에서 노태우 대통령과 가이후 총리
 summary:
 image:
 description:
