--- a/content/items/ex-04/section-01-left/5_陸軍省 軍慰安所従業婦等募集ニ關スル件(군 위안소 종업부 등 모집에 관한 건).md
+++ b/content/items/ex-04/section-01-left/5_陸軍省 軍慰安所従業婦等募集ニ關スル件(군 위안소 종업부 등 모집에 관한 건).md
@@ -1,7 +1,7 @@
 ---
 reference_code:
 media_type:
-title: 5_陸軍省 軍慰安所従業婦等募集ニ關スル件(군 위안소 종업부 등 모집에 관한 건)
+title: 陸軍省 軍慰安所従業婦等募集ニ關スル件(군 위안소 종업부 등 모집에 관한 건)
 summary:
 image:
 description:
