--- a/content/items/ex-04/section-01-right/10_기독교회관으로 사무실을 이전하고 개최한 현판식.md
+++ b/content/items/ex-04/section-01-right/10_기독교회관으로 사무실을 이전하고 개최한 현판식.md
@@ -1,7 +1,7 @@
 ---
 reference_code:
 media_type:
-title: 10_기독교회관으로 사무실을 이전하고 개최한 현판식
+title: 기독교회관으로 사무실을 이전하고 개최한 현판식
 summary:
 image:
 description:
