--- a/content/items/ex-04/section-01-right/14_국회 청원을 위해 한교여연에서 열린 기자회견.md
+++ b/content/items/ex-04/section-01-right/14_국회 청원을 위해 한교여연에서 열린 기자회견.md
@@ -1,7 +1,7 @@
 ---
 reference_code:
 media_type:
-title: 14_국회 청원을 위해 한교여연에서 열린 기자회견
+title: 국회 청원을 위해 한교여연에서 열린 기자회견
 summary:
 image:
 description:
