--- a/content/items/ex-04/section-01-right/17_한국, 필리핀, 타이완, 타이, 홍콩, 일본 6개국이 참가한 제1회 아시아연대회의.md
+++ b/content/items/ex-04/section-01-right/17_한국, 필리핀, 타이완, 타이, 홍콩, 일본 6개국이 참가한 제1회 아시아연대회의.md
@@ -1,7 +1,7 @@
 ---
 reference_code:
 media_type:
-title: 17_한국, 필리핀, 타이완, 타이, 홍콩, 일본 6개국이 참가한 제1회 아시아연대회의
+title: 한국, 필리핀, 타이완, 타이, 홍콩, 일본 6개국이 참가한 제1회 아시아연대회의
 summary:
 image:
 description:
