--- a/content/items/ex-04/section-01-right/20_국민모금에 의한 위로금에 반대하는 기자회견.md
+++ b/content/items/ex-04/section-01-right/20_국민모금에 의한 위로금에 반대하는 기자회견.md
@@ -1,7 +1,7 @@
 ---
 reference_code:
 media_type:
-title: 20_국민모금에 의한 위로금에 반대하는 기자회견
+title: 국민모금에 의한 위로금에 반대하는 기자회견
 summary:
 image:
 description:
