--- a/content/items/ex-04/section-01-right/2_전두환대통령 일본방문 즈음한 우리의 입장_1.md
+++ b/content/items/ex-04/section-01-right/2_전두환대통령 일본방문 즈음한 우리의 입장_1.md
@@ -1,7 +1,7 @@
 ---
 reference_code:
 media_type:
-title: 2_전두환대통령 일본방문 즈음한 우리의 입장_1
+title: 전두환대통령 일본방문 즈음한 우리의 입장_1
 summary:
 image:
 description:
