--- a/content/items/ex-04/section-01-right/5_제주도에서 개최된 '여성과 관광문화' 국제 세미나.md
+++ b/content/items/ex-04/section-01-right/5_제주도에서 개최된 '여성과 관광문화' 국제 세미나.md
@@ -1,7 +1,7 @@
 ---
 reference_code:
 media_type:
-title: 5_제주도에서 개최된 '여성과 관광문화' 국제 세미나
+title: 제주도에서 개최된 '여성과 관광문화' 국제 세미나
 summary:
 image:
 description:
