--- a/content/items/ex-04/section-02/23_.md
+++ b/content/items/ex-04/section-02/23_.md
@@ -1,10 +1,10 @@
 ---
 reference_code:
 media_type:
-title: '23_'
-summary:
+title: '일본국회 앞 전후보상 촉구 단식투쟁에 참여함'
+summary: 1996.10.18사진
 image:
-description:
+description: 
 modified_at:
 created_at:
 components:
