--- a/content/items/ex-04/section-02/6_제29차 특별전 '조선침략과 강제연행'전 문화포럼 참석 의뢰★.md
+++ b/content/items/ex-04/section-02/6_제29차 특별전 '조선침략과 강제연행'전 문화포럼 참석 의뢰★.md
@@ -1,7 +1,7 @@
 ---
 reference_code:
 media_type:
-title: 6_제29차 특별전 '조선침략과 강제연행'전 문화포럼 참석 의뢰★
+title: 제29차 특별전 '조선침략과 강제연행'전 문화포럼 참석 의뢰★
 summary:
 image:
 description:
