--- a/content/items/ex-04/section-02/7_일본 오사카. 일본 최초의 증언집회 사진(1).md
+++ b/content/items/ex-04/section-02/7_일본 오사카. 일본 최초의 증언집회 사진(1).md
@@ -1,7 +1,7 @@
 ---
 reference_code:
 media_type:
-title: 7_일본 오사카. 일본 최초의 증언집회 사진(1)
+title: 일본 오사카. 일본 최초의 증언집회 사진(1)
 summary:
 image:
 description:
