--- a/content/items/ex-04/section-02/99_왜, 우리는 지금 이 문제에 도전하고 있는가.md
+++ b/content/items/ex-04/section-02/99_왜, 우리는 지금 이 문제에 도전하고 있는가.md
@@ -1,7 +1,7 @@
 ---
 reference_code:
 media_type:
-title: 99_왜, 우리는 지금 이 문제에 도전하고 있는가
+title: 왜, 우리는 지금 이 문제에 도전하고 있는가
 summary:
 image:
 description:
