--- a/content/items/ex-04/section-01-left/1_한일협정 조인 특별 담화문을 발표하는 박정희 대통령.md
+++ b/content/items/ex-04/section-01-left/1_한일협정 조인 특별 담화문을 발표하는 박정희 대통령.md
@@ -1,7 +1,7 @@
 ---
 reference_code:
 media_type:
-title: 1_한일협정 조인 특별 담화문을 발표하는 박정희 대통령
+title: 한일협정 조인 특별 담화문을 발표하는 박정희 대통령
 summary:
 image:
 description:
