--- a/content/items/ex-04/section-01-right/23_2000년 일본군성노예전범 여성국제법정 보고서.md
+++ b/content/items/ex-04/section-01-right/23_2000년 일본군성노예전범 여성국제법정 보고서.md
@@ -1,7 +1,7 @@
 ---
 reference_code:
 media_type:
-title: 23_2000년 일본군성노예전범 여성국제법정 보고서
+title: 2000년 일본군성노예전범 여성국제법정 보고서
 summary:
 image:
 description:
