--- a/content/items/ex-04/section-01-right/6_일본 히로히또 국왕 사망에 대한 한국교회여성의 입장.md
+++ b/content/items/ex-04/section-01-right/6_일본 히로히또 국왕 사망에 대한 한국교회여성의 입장.md
@@ -1,7 +1,7 @@
 ---
 reference_code:
 media_type:
-title: 6_일본 히로히또 국왕 사망에 대한 한국교회여성의 입장
+title: 일본 히로히또 국왕 사망에 대한 한국교회여성의 입장
 summary:
 image:
 description:
