--- a/content/items/ex-04/section-02/25_김학순 장례식 참가자 일동이 작성한 추도문.md
+++ b/content/items/ex-04/section-02/25_김학순 장례식 참가자 일동이 작성한 추도문.md
@@ -1,7 +1,7 @@
 ---
 reference_code:
 media_type:
-title: 25_김학순 장례식 참가자 일동이 작성한 추도문
+title: 김학순 장례식 참가자 일동이 작성한 추도문
 summary:
 image:
 description:
