--- a/content/items/ex-04/section-02/8_일본 오사카. 일본 최초의 증언집회 사진(2).md
+++ b/content/items/ex-04/section-02/8_일본 오사카. 일본 최초의 증언집회 사진(2).md
@@ -1,7 +1,7 @@
 ---
 reference_code:
 media_type:
-title: 8_일본 오사카. 일본 최초의 증언집회 사진(2)
+title: 일본 오사카. 일본 최초의 증언집회 사진(2)
 summary:
 image:
 description:
