Update 조선인[위안부]가 계신던 집-마츠시로.md

--- a/content/items/ex-02/역사관/완_위안소/조선인[위안부]가 계신던 집-마츠시로.md
+++ b/content/items/ex-02/역사관/완_위안소/조선인[위안부]가 계신던 집-마츠시로.md
@@ -1,14 +1,16 @@
 ---
 reference_code:
 media_type:
-title: 조선인[위안부]가 계신던 집-마츠시로
-summary:
+title: "'위안소' 사진"
+summary: "'위안소'로 사용된 건물과 '위안소'내부"
 image:
 description:
 modified_at:
 created_at:
 components:
 - https://wwm3.s3.ap-northeast-2.amazonaws.com/exhibition/ex-02/역사관/완_위안소/조선인[위안부]가+계신던+집-마츠시로.JPG
+- https://wwm3.s3.ap-northeast-2.amazonaws.com/exhibition/ex-02/역사관/완_위안소/사진.JPG
+- https://wwm3.s3.ap-northeast-2.amazonaws.com/exhibition/ex-02/역사관/완_위안소/3.gif
 tags:
 -
 ---
