--- a/content/items/ex-02/역사관/완_박영심할머니와 역사사진/12. 박영심-1.md
+++ b/content/items/ex-02/역사관/완_박영심할머니와 역사사진/12. 박영심-1.md
@@ -1,8 +1,8 @@
 ---
 reference_code:
 media_type:
-title: 12. 박영심-1
-summary:
+title: 박영심의 증언
+summary: 북한 피해생존자 박영심이 일본의 패전 직후 임신한 채 버려졌던 당시 자신의 모습이 찍힌 사진을 들고 있다.
 image:
 description:
 modified_at:
