--- a/content/items/ex-02/역사관/완_박영심할머니와 역사사진/심문받는여인.md
+++ b/content/items/ex-02/역사관/완_박영심할머니와 역사사진/심문받는여인.md
@@ -1,14 +1,15 @@
 ---
 reference_code:
 media_type:
-title: 심문받는여인
-summary:
+title: 미군 포로수용소 내 심문 현장
+summary: "미군 포로수용소에 억류된 '위안부'여성들"
 image:
 description:
 modified_at:
 created_at:
 components:
 - https://wwm3.s3.ap-northeast-2.amazonaws.com/exhibition/ex-02/역사관/완_박영심할머니와+역사사진/심문받는여인.jpg
+- https://wwm3.s3.ap-northeast-2.amazonaws.com/exhibition/ex-02/역사관/완_박영심할머니와+역사사진/13.+미군포로수용소위안부.jpg
 tags:
 -
 ---
