--- a/content/items/ex-02/운동사관/침묵을깨트리다/첫수요집회 사본.md
+++ b/content/items/ex-02/운동사관/침묵을깨트리다/첫수요집회 사본.md
@@ -1,8 +1,8 @@
 ---
 reference_code:
 media_type:
-title: 첫수요집회 사본
-summary:
+title: 1992년 1월 8일
+summary: "제1차 일본군'위안부'문제 해결을 위한 수요시위"
 image:
 description:
 modified_at:
