--- a/content/items/ex-02/역사관/완_강덕경할머니와 신문헤드/38.07.16.md
+++ b/content/items/ex-02/역사관/완_강덕경할머니와 신문헤드/38.07.16.md
@@ -1,7 +1,7 @@
 ---
 reference_code:
 media_type:
-title: "일제강점기 신문기사: "유괴/납치","위안부 급모" 등"
+title: "일제강점기 신문기사: '유괴/납치','위안부 급모'' 등"
 summary: "'위안소'가 설립되기 시작하면서 식민지 조선에서 여성들을 유괴, 납치, 인신매매하는 사건이 급증하기 시작했다."
 image:
 description:
