Update 20090407 헌재앞 기자회견_2193.md

--- a/content/items/ex-02/운동사관/책임자를처벌하라/20090407 헌재앞 기자회견_2193.md
+++ b/content/items/ex-02/운동사관/책임자를처벌하라/20090407 헌재앞 기자회견_2193.md
@@ -1,8 +1,8 @@
 ---
 reference_code:
 media_type:
-title: 20090407 헌재앞 기자회견_2193
-summary:
+title: 한국 헌법재판소 판결
+summary: 
 image:
 description:
 modified_at:
