--- a/content/items/ex-02/운동사관/책임자를처벌하라/2000.4.29 일본군성노예전범학생법정.md
+++ b/content/items/ex-02/운동사관/책임자를처벌하라/2000.4.29 일본군성노예전범학생법정.md
@@ -1,8 +1,8 @@
 ---
 reference_code:
 media_type:
-title: 2000.4.29 일본군성노예전범학생법정
-summary:
+title: 일본군성노예전범 여성국제법정
+summary: 일본군성노예전범 여성국제법정의 사전행사로 진행된 일본군성노예전범 학생법정의 모습. 2000년 4월 29일에 촬영되었다.
 image:
 description:
 modified_at:
