Update 1995.8.7-1 병원 검진을 받는 피해자들.md

--- a/content/items/ex-02/운동사관/연대로희망을만들다/1995.8.7-1 병원 검진을 받는 피해자들.md
+++ b/content/items/ex-02/운동사관/연대로희망을만들다/1995.8.7-1 병원 검진을 받는 피해자들.md
@@ -1,8 +1,8 @@
 ---
 reference_code:
 media_type:
-title: 1995.8.7-1 병원 검진을 받는 피해자들
-summary:
+title: 병원 검진을 받는 피해자들
+summary: 2001년 9월 19일 촬영된 사진이다.
 image:
 description:
 modified_at:
