Update 1992.08 일본군'위안부'피해자 황금주, 유엔 인권소위원회에 직접 참석하여 증언.md

--- a/content/items/ex-02/운동사관/연대로희망을만들다/1992.08 일본군'위안부'피해자 황금주, 유엔 인권소위원회에 직접 참석하여 증언.md
+++ b/content/items/ex-02/운동사관/연대로희망을만들다/1992.08 일본군'위안부'피해자 황금주, 유엔 인권소위원회에 직접 참석하여 증언.md
@@ -1,8 +1,8 @@
 ---
 reference_code:
 media_type:
-title: 1992.08 일본군'위안부'피해자 황금주, 유엔 인권소위원회에 직접 참석하여 증언
-summary:
+title: 황금주 증언 사진
+summary:"1992년 8월 일본군'위안부'피해자 황금주, UN 인권소위원회에 직접 참석하여 증언"
 image:
 description:
 modified_at:
