Update 2006 ILO총회 안건 채택을 위한 활동.md

--- a/content/items/ex-02/운동사관/연대로희망을만들다/2006 ILO총회 안건 채택을 위한 활동.md
+++ b/content/items/ex-02/운동사관/연대로희망을만들다/2006 ILO총회 안건 채택을 위한 활동.md
@@ -1,8 +1,8 @@
 ---
 reference_code:
 media_type:
-title: 2006 ILO총회 안건 채택을 위한 활동
-summary:
+title: 2006년 ILO총회 안건 채택을 위한 활동
+summary: 국제노동기구(ILO)총회 안건 채택을 위해 민주노동조합총연맹 사무실에서 대화를 나누고있다.
 image:
 description:
 modified_at:
