Update 20070215 미 하원 청문회_1790.md

--- a/content/items/ex-02/운동사관/연대로희망을만들다/20070215 미 하원 청문회_1790.md
+++ b/content/items/ex-02/운동사관/연대로희망을만들다/20070215 미 하원 청문회_1790.md
@@ -1,8 +1,8 @@
 ---
 reference_code:
 media_type:
-title: 20070215 미 하원 청문회_1790
-summary:
+title: 미국 하원 청문회
+summary: 미국 하원 청문회 현장을 지켜보는 한국과 호주의 피해자들
 image:
 description:
 modified_at:
