--- a/content/items/ex-02/운동사관/연대로희망을만들다/070521 223 남북.md
+++ b/content/items/ex-02/운동사관/연대로희망을만들다/070521 223 남북.md
@@ -1,8 +1,8 @@
 ---
 reference_code:
 media_type:
-title: 070521 223 남북
-summary:
+title: 제8차 아시아연대회의
+summary: 2007년 5월 21일 제8차 일본군'위안부'문제 아시아연대회의에서 남북이 공동성명서를 읽는 모습이다.
 image:
 description:
 modified_at:
