--- a/content/items/ex-02/생애관/할머니들/강일출.md
+++ b/content/items/ex-02/생애관/할머니들/강일출.md
@@ -2,7 +2,7 @@
 reference_code:
 media_type:
 title: 강일출
-summary:
+summary: Kang Ilchul, 한국
 image:
 description:
 modified_at:
@@ -12,3 +12,6 @@ components:
 tags:
 -
 ---
+
+1928년 경상북도 상주 출생
+16세에 연행되어 중국 목단강에서 일본군성노예 생활
