--- a/content/items/ex-02/생애관/할머니들/공점엽.md
+++ b/content/items/ex-02/생애관/할머니들/공점엽.md
@@ -2,7 +2,7 @@
 reference_code:
 media_type:
 title: 공점엽
-summary:
+summary: Gong Jeomyeop, 한국
 image:
 description:
 modified_at:
@@ -12,3 +12,5 @@ components:
 tags:
 -
 ---
+1920년 전라남도 무안 출생
+16세에 연행되어 중국 해성, 상해, 하얼빈에서 일본군 성노예 생활
