--- a/content/items/ex-02/생애관/할머니들/길원옥.md
+++ b/content/items/ex-02/생애관/할머니들/길원옥.md
@@ -2,7 +2,7 @@
 reference_code:
 media_type:
 title: 길원옥
-summary:
+summary: Gil Wonok, 한국
 image:
 description:
 modified_at:
@@ -12,3 +12,6 @@ components:
 tags:
 -
 ---
+
+1928년 평안북도 희천 출생
+13세에 연행되어 중국 하얼빈, 석가장에서 일본군성노예 생활
