--- a/content/items/ex-02/생애관/할머니들/김복동.md
+++ b/content/items/ex-02/생애관/할머니들/김복동.md
@@ -2,7 +2,7 @@
 reference_code:
 media_type:
 title: 김복동
-summary:
+summary: Kim Bokdong, 한국
 image:
 description:
 modified_at:
@@ -12,3 +12,6 @@ components:
 tags:
 -
 ---
+
+1926년 경상남도 양산 출생
+15세에 연행되어 중국, 홍콩, 인도네시아, 말레이시아, 싱가포르 등지에서 일본군성노예 생활
