--- a/content/items/ex-02/생애관/할머니들/김순옥.md
+++ b/content/items/ex-02/생애관/할머니들/김순옥.md
@@ -2,7 +2,7 @@
 reference_code:
 media_type:
 title: 김순옥
-summary:
+summary: Kim Sunok, 한국
 image:
 description:
 modified_at:
@@ -12,3 +12,6 @@ components:
 tags:
 -
 ---
+
+1922년 평안남도 평양 출생
+18세에 연행되어 중국 흑룡강성에서 일본군성노예 생활
