--- a/content/items/ex-02/생애관/할머니들/김은례.md
+++ b/content/items/ex-02/생애관/할머니들/김은례.md
@@ -2,7 +2,7 @@
 reference_code:
 media_type:
 title: 김은례
-summary:
+summary: Kim Eunrye, 한국
 image:
 description:
 modified_at:
@@ -12,3 +12,6 @@ components:
 tags:
 -
 ---
+
+1926년 평안남도 평양 출생
+17세에 연행되어 중국 남경에서 일본군성노예 생활
