--- a/content/items/ex-02/생애관/할머니들/김학순.md
+++ b/content/items/ex-02/생애관/할머니들/김학순.md
@@ -2,7 +2,7 @@
 reference_code:
 media_type:
 title: 김학순
-summary:
+summary: Kim Haksoon, 한국
 image:
 description:
 modified_at:
@@ -12,3 +12,6 @@ components:
 tags:
 -
 ---
+
+1924년 중국 길림 출생
+17세에 연행되어 중국 철벽진에서 일본군성노예 생활
