--- a/content/items/ex-02/생애관/할머니들/리계월.md
+++ b/content/items/ex-02/생애관/할머니들/리계월.md
@@ -2,7 +2,7 @@
 reference_code:
 media_type:
 title: 리계월
-summary:
+summary: Yi Gyewol, 북한
 image:
 description:
 modified_at:
@@ -12,3 +12,5 @@ components:
 tags:
 -
 ---
+1921년 황해남도 벽성 출생
+16세에 연행되어 중국 하얼빈에서 일본군성노예 생활
