--- a/content/items/ex-02/생애관/할머니들/송신도.md
+++ b/content/items/ex-02/생애관/할머니들/송신도.md
@@ -2,7 +2,7 @@
 reference_code:
 media_type:
 title: 송신도
-summary:
+summary: 1922년 충청남도 유성 출생  / 17세에 연행되어 중국 무창의 '세계관'위안소와 악주, 장안, 함녕 등지에서 일본군성노예생활
 image:
 description:
 modified_at:
