--- a/content/items/ex-02/생애관/할머니들/이막달.md
+++ b/content/items/ex-02/생애관/할머니들/이막달.md
@@ -2,7 +2,7 @@
 reference_code:
 media_type:
 title: 이막달
-summary:
+summary: 
 image:
 description:
 modified_at:
@@ -12,3 +12,5 @@ components:
 tags:
 -
 ---
+1923년 경상남도 산청출생 
+18세에 연행되어 대만 기륭에서 일본군성노예생활
