--- a/content/items/ex-02/생애관/할머니들/황금주.md
+++ b/content/items/ex-02/생애관/할머니들/황금주.md
@@ -2,7 +2,7 @@
 reference_code:
 media_type:
 title: 황금주
-summary:
+summary: 
 image:
 description:
 modified_at:
@@ -12,3 +12,4 @@ components:
 tags:
 -
 ---
+1922년 충청남도 부여 출생 /20세에 연행되어 중국 길림성에서 일본군성노예 생활
