--- a/content/items/ex-02/생애관/할머니들/강덕경.md
+++ b/content/items/ex-02/생애관/할머니들/강덕경.md
@@ -2,7 +2,7 @@
 reference_code:
 media_type:
 title: 강덕경
-summary:
+summary: Kang Dukkyung, 한국 
 image:
 description:
 modified_at:
@@ -12,3 +12,5 @@ components:
 tags:
 -
 ---
+1929년 경상남도 진주 출생
+16세에 근로정신대 1기생으로 동원되어 일본에 간 후 도망치다 붙잡혀 위안소에서 일본군성노예 생활
