--- a/content/items/ex-02/생애관/할머니들/김영숙.md
+++ b/content/items/ex-02/생애관/할머니들/김영숙.md
@@ -2,7 +2,7 @@
 reference_code:
 media_type:
 title: 김영숙
-summary:
+summary: Kim Yeongsuk, 북한
 image:
 description:
 modified_at:
@@ -12,3 +12,6 @@ components:
 tags:
 -
 ---
+
+1927년 평안북도 태천 출생
+13세에 연행되어 중국 심양에서 일본군성노예 생활
