--- a/content/items/ex-02/생애관/할머니들/이옥선.md
+++ b/content/items/ex-02/생애관/할머니들/이옥선.md
@@ -2,7 +2,7 @@
 reference_code:
 media_type:
 title: 이옥선
-summary:
+summary: 
 image:
 description:
 modified_at:
@@ -12,3 +12,4 @@ components:
 tags:
 -
 ---
+1927년 부산 출생 / 16세에 연행되어 중국 연길에서 일본군성노예생활
