--- a/content/items/ex-02/생애관/할머니들/하상숙.md
+++ b/content/items/ex-02/생애관/할머니들/하상숙.md
@@ -2,7 +2,7 @@
 reference_code:
 media_type:
 title: 하상숙
-summary:
+summary: 
 image:
 description:
 modified_at:
@@ -12,3 +12,4 @@ components:
 tags:
 -
 ---
+1928년 충청남도 서산 출생 / 17세에 연행되어 중국 적경리 위안소에서 일본군성노예생활
