--- a/content/items/ex-02/생애관/할머니들/황순이.md
+++ b/content/items/ex-02/생애관/할머니들/황순이.md
@@ -2,7 +2,7 @@
 reference_code:
 media_type:
 title: 황순이
-summary:
+summary: 
 image:
 description:
 modified_at:
@@ -12,3 +12,4 @@ components:
 tags:
 -
 ---
+1922년 경상남도 하동 출생 / 3세에 연행되어 몽골, 홍콩, 싱가포르에서 일본군성노예생활
