--- a/content/items/ex-02/운동사관/연대로희망을만들다/11월22일 기자회견_1906.md
+++ b/content/items/ex-02/운동사관/연대로희망을만들다/11월22일 기자회견_1906.md
@@ -1,8 +1,8 @@
 ---
 reference_code:
 media_type:
-title: 11월22일 기자회견_1906
-summary:
+title: 캐나다 의회 결의 기자회견
+summary: "캐나다 의회에서 '위안부'운동을 지지하는 연합의 기자회견 사진이다"
 image:
 description:
 modified_at:
