--- a/content/items/ex-02/운동사관/연대로희망을만들다/2000.12.7-12(4) 남북.md
+++ b/content/items/ex-02/운동사관/연대로희망을만들다/2000.12.7-12(4) 남북.md
@@ -1,8 +1,8 @@
 ---
 reference_code:
 media_type:
-title: 2000.12.7-12(4) 남북
-summary:
+title: 남북공동기소에 관한 공동 기자회견
+summary: 2000년 12월 남북공동기소에 관한 공동 기자회견 현장이다. 
 image:
 description:
 modified_at:
