update contents 생애관 할머니들

--- a/content/items/ex-02/생애관/할머니들/노수복.md
+++ b/content/items/ex-02/생애관/할머니들/노수복.md
@@ -2,7 +2,7 @@
 reference_code:
 media_type:
 title: 노수복
-summary:
+summary: Noh Subok, 한국
 image:
 description:
 modified_at:
@@ -12,3 +12,6 @@ components:
 tags:
 -
 ---
+
+1921년 경상남도 안동 출생
+22세에 연행되어 싱가포르, 태국에서 일본군성노예 생활
