--- a/content/items/ex-02/생애관/할머니들/박옥련.md
+++ b/content/items/ex-02/생애관/할머니들/박옥련.md
@@ -2,7 +2,7 @@
 reference_code:
 media_type:
 title: 박옥련
-summary:
+summary: Bak Oklyeon, 한국
 image:
 description:
 modified_at:
@@ -12,3 +12,6 @@ components:
 tags:
 -
 ---
+
+1919년 전라북도 무주 출생
+23세에 연행되어 남태평양 라바울에서 일본군성노예 생활
