--- a/content/items/ex-02/생애관/할머니들/박옥선.md
+++ b/content/items/ex-02/생애관/할머니들/박옥선.md
@@ -2,7 +2,7 @@
 reference_code:
 media_type:
 title: 박옥선
-summary:
+summary: Bak Okseon, 한국
 image:
 description:
 modified_at:
@@ -12,3 +12,6 @@ components:
 tags:
 -
 ---
+
+1924년 경상남도 밀양 출생
+18세에 연행되어 중국 흑룡강성에서 일본군성노예 생활
