--- a/content/items/ex-02/생애관/할머니들/이순덕.md
+++ b/content/items/ex-02/생애관/할머니들/이순덕.md
@@ -2,7 +2,7 @@
 reference_code:
 media_type:
 title: 이순덕
-summary: 
+summary: Yi Sundeok,한국
 image:
 description:
 modified_at:
@@ -12,4 +12,5 @@ components:
 tags:
 -
 ---
-1918 전라북도 김제 출생 / 18세 때 연행되어 중국 상해에서 일본군성노예생활
+1918 전라북도 김제 출생 / 
+18세 때 연행되어 중국 상해에서 일본군성노예생활
