--- a/content/items/ex-02/생애관/할머니들/이용녀.md
+++ b/content/items/ex-02/생애관/할머니들/이용녀.md
@@ -2,7 +2,7 @@
 reference_code:
 media_type:
 title: 이용녀
-summary: 
+summary: Yi Yongnyeo,한국
 image:
 description:
 modified_at:
@@ -13,4 +13,5 @@ tags:
 -
 ---
 
-1926년 경기도 여주 출생 / 17세에 연행되어 미얀마(버마)에서 일본군성노예생활
+1926년 경기도 여주 출생 / 
+17세에 연행되어 미얀마(버마)에서 일본군성노예생활
