--- a/content/items/ex-02/생애관/할머니들/이용수.md
+++ b/content/items/ex-02/생애관/할머니들/이용수.md
@@ -2,7 +2,7 @@
 reference_code:
 media_type:
 title: 이용수
-summary:
+summary: Yi Yongsu, 한국
 image:
 description:
 modified_at:
@@ -13,4 +13,5 @@ tags:
 -
 ---
 
-1928년 경상북도 대구 출생 /17세에 연행되어 대만 신죽에서 일본군성노예생활
+1928년 경상북도 대구 출생 /
+17세에 연행되어 대만 신죽에서 일본군성노예생활
