--- a/content/items/ex-02/생애관/할머니들/정서운.md
+++ b/content/items/ex-02/생애관/할머니들/정서운.md
@@ -2,7 +2,7 @@
 reference_code:
 media_type:
 title: 정서운
-summary:
+summary: JeongSeo-un, 한국
 image:
 description:
 modified_at:
@@ -12,4 +12,5 @@ components:
 tags:
 -
 ---
-1924년 경상남도 하동 출생 /18세에 연행되어 인도네시아 스마랑에서 일본군성노예생활
+1924년 경상남도 하동 출생 /
+18세에 연행되어 인도네시아 스마랑에서 일본군성노예생활
