--- a/content/items/ex-02/생애관/할머니들/최갑순.md
+++ b/content/items/ex-02/생애관/할머니들/최갑순.md
@@ -2,7 +2,7 @@
 reference_code:
 media_type:
 title: 최갑순
-summary:
+summary: Choi Gapsun, 한국
 image:
 description:
 modified_at:
@@ -12,4 +12,5 @@ components:
 tags:
 -
 ---
- 1919년 전라남도 구례 출생 / 15세에 연행되어 중국 동안성에서 일본군성노예생활
+ 1919년 전라남도 구례 출생 / 
+ 15세에 연행되어 중국 동안성에서 일본군성노예생활
