--- a/content/items/ex-02/생애관/할머니들/황순이.md
+++ b/content/items/ex-02/생애관/할머니들/황순이.md
@@ -2,9 +2,9 @@
 reference_code:
 media_type:
 title: 황순이
-summary: 
+summary: Hwang Suni, 한국
 image:
-description:
+descri국tion:
 modified_at:
 created_at:
 components:
@@ -12,4 +12,5 @@ components:
 tags:
 -
 ---
-1922년 경상남도 하동 출생 / 3세에 연행되어 몽골, 홍콩, 싱가포르에서 일본군성노예생활
+1922년 경상남도 하동 출생 / 
+3세에 연행되어 몽골, 홍콩, 싱가포르에서 일본군성노예생활
