--- a/content/items/ex-02/생애관/할머니들/박두리.md
+++ b/content/items/ex-02/생애관/할머니들/박두리.md
@@ -2,7 +2,7 @@
 reference_code:
 media_type:
 title: 박두리
-summary:
+summary: Bak Duri, 한국
 image:
 description:
 modified_at:
@@ -12,3 +12,6 @@ components:
 tags:
 -
 ---
+
+1924년 경상남도 청도 출생
+17세에 연행되어 대만 창화에서 일본군성노예 생활
