--- a/content/items/ex-02/생애관/할머니들/이수산.md
+++ b/content/items/ex-02/생애관/할머니들/이수산.md
@@ -2,7 +2,7 @@
 reference_code:
 media_type:
 title: 이수산
-summary: 
+summary: Yi Susan, 한국
 image:
 description:
 modified_at:
@@ -12,4 +12,5 @@ components:
 tags:
 -
 ---
-1928년 경상북도 영일 출생 / 17세에 연행되어 중국 목단강에서 일본군성노예생활
+1928년 경상북도 영일 출생 / 
+17세에 연행되어 중국 목단강에서 일본군성노예생활
