--- a/content/guide/stores/박물관 클리어파일/클리어파일 뒷면.md
+++ b/content/guide/stores/박물관 클리어파일/클리어파일 뒷면.md
@@ -7,7 +7,7 @@ image:
 description:
 modified_at:
 created_at:
-featured: https://wwm3.s3.ap-northeast-2.amazonaws.com/stores/박물관+클리어파일/클리어파일4.jpg
+featured: https://wwm3.s3.ap-northeast-2.amazonaws.com/stores/박물관+클리어파일/클리어파일+뒷면.jpg
 price: 
 buying_link: https://docs.google.com/forms/d/e/1FAIpQLSc9nedLjpcX4QsqHfsDClSUvnY_z8JjKZMrkfDJmnqozNUliA/viewform
 components:
