--- a/content/items/(1)b1층/계단전시(호소의벽)/L1755076.md
+++ b/content/items/(1)b1층/계단전시(호소의벽)/L1755076.md
@@ -1,7 +1,7 @@
 ---
 reference_code:
-media_type:
-title: L1755076
+media_type: 호소의벽
+title: 그걸 다 기억하고 살았으면 아마 살지 못했을 거예요.
 summary:
 image:
 description:
