--- a/content/items/(3)2층/역사관/자료/LHS_0225.md
+++ b/content/items/(3)2층/역사관/자료/LHS_0225.md
@@ -2,7 +2,7 @@
 reference_code:
 media_type:
 title: "위안소'난코쿠표(남국료)'출입증"
-summary: 붉은
+summary: 붉은 물결선은 일본 해군의 상징이며, '하기와라 부대'라고 인쇄되어 있다. 하기와라 해군 대령의 도장 등은 군이 이 위안소를 관리했다는 것을 증명한다. (당시 군속 마츠바라 마사루 제공)
 image:
 description: 
 modified_at:
