이달의 기록 더미 수정

--- a/content/archive/featured/2.md
+++ b/content/archive/featured/2.md
@@ -2,23 +2,10 @@
 title: 박물관을 둘러싼 기록과 예술품들
 date: 2021-12-21T15:06:41.018Z
 summary: 할머니들의 현재와 과거를 상상력으로 표현한 그림들이다. 전시장 벽면에서 만날 수 있다.할머니들의 현재와 과거를 상상력으로 표현한 그림들이다. 전시장 벽면에서 만날 수 있다.
-image: https://wwm3.s3.ap-northeast-2.amazonaws.com/exhibition/ex-01/section3/스크린샷+2021-10-14+오후+10.52.03.png
+image: https://durumi.io/cdn-cgi/image/fit=scale-down,width=1920/https://wwm3.s3.ap-northeast-2.amazonaws.com/exhibition/ex-04/section-02/3_%eb%81%8c%eb%a0%a4%ea%b0%90.jpg
 home_sticky: false
 pinned: false
 ---
 
-Reprehenderit incididunt sint nisi laboris ad commodo duis esse incididunt. Ea in laboris veniam excepteur nulla ex id proident enim duis Lorem laboris ad esse. Deserunt minim nostrud deserunt dolore pariatur duis velit id elit esse quis nulla nisi voluptate. Cupidatat pariatur Lorem nisi adipisicing eu. Eiusmod consequat minim sunt non consequat ad occaecat sunt irure consectetur dolore ex reprehenderit. Amet officia pariatur deserunt reprehenderit adipisicing qui in sunt ea est esse cupidatat reprehenderit non. Aute consectetur non nostrud duis ipsum adipisicing ad labore veniam.
+할머니들의 현재와 과거를 상상력으로 표현한 그림들이다. 전시장 벽면에서 만날 수 있다.할머니들의 현재와 과거를 상상력으로 표현한 그림들이다. 전시장 벽면에서 만날 수 있다.
 
-Pariatur consequat dolore est esse ut commodo ad consequat anim cupidatat dolor exercitation. Aute sunt ad laborum dolore sunt ut enim duis aliquip aliqua. Minim exercitation sunt officia cupidatat. Laboris aute dolor labore cupidatat occaecat.
-
-Id ullamco eu laborum ad occaecat sit deserunt aute sit fugiat ipsum ad ad. Excepteur non sit magna irure amet officia voluptate. Quis laboris duis labore ut pariatur nostrud sunt duis ipsum aute enim voluptate qui. Nostrud ex ex nostrud laborum velit consequat.
-
-Ad sint proident fugiat anim anim amet nostrud laboris aliqua ex commodo sunt enim sit. Tempor excepteur eu nisi ut ea consectetur elit mollit et exercitation exercitation sunt. Cillum sint do minim irure ipsum nulla deserunt fugiat non et. Laborum amet consequat commodo reprehenderit magna. Occaecat mollit fugiat veniam voluptate ex reprehenderit. Est eu culpa ullamco labore excepteur in do ea incididunt ex veniam do enim. Ipsum adipisicing tempor dolor laborum ea eiusmod irure ipsum.
-
-Sunt sunt incididunt magna culpa nostrud id Lorem in exercitation sint aute. Veniam reprehenderit sint sit incididunt. Irure do minim elit mollit id ea occaecat consectetur anim elit et non ipsum nulla. Dolor ex ad exercitation aute occaecat amet magna Lorem ad dolor aute.
-
-Ut officia nisi reprehenderit veniam est proident magna velit ullamco irure. Sunt cupidatat mollit et tempor ea est ullamco culpa adipisicing ex ad ad et minim. Aliquip exercitation nostrud ex nostrud enim ut consequat laborum deserunt qui cupidatat veniam irure in. Mollit nisi nisi irure nostrud. Lorem irure magna enim dolor occaecat aliqua dolore. Cillum elit qui aliqua irure est voluptate adipisicing voluptate magna id magna aute.
-
-Esse anim labore quis occaecat. Dolor sint irure eiusmod occaecat mollit esse excepteur in cupidatat duis deserunt laborum. Deserunt officia irure pariatur ex ad. Laborum voluptate id eiusmod adipisicing ea do commodo in amet reprehenderit reprehenderit mollit sit dolor. Minim et consectetur esse sit commodo proident ex do esse irure id exercitation in. Enim eiusmod sunt proident veniam ex magna cupidatat. Dolore incididunt do dolor quis amet deserunt elit id aliquip reprehenderit consectetur fugiat ea nisi.
-
-Aliqua irure duis in incididunt magna nostrud officia qui aliquip nisi amet ut sit amet. Id dolore ad eu eu adipisicing consequat sunt nisi amet ex anim Lorem non id. Ut cillum laboris irure labore labore eiusmod pariatur qui mollit Lorem tempor laborum cupidatat occaecat. Duis consequat elit do in ullamco fugiat eiusmod qui mollit id consequat. Irure aliqua est nisi voluptate quis ipsum eiusmod incididunt. Aute est cillum ullamco ullamco in Lorem.
