--- a/content/guide/stores/작은 소녀상(작은 평화비)/26_작은소녀상 (1)r.md
+++ b/content/guide/stores/작은 소녀상(작은 평화비)/26_작은소녀상 (1)r.md
@@ -4,21 +4,29 @@ media_type:
 title: 작은 소녀상(작은 평화비)
 summary:
 image:
-description:
+description: 
+- 작은 소녀상(Peace Statue/平和少女像)
+- 
+- 크기
+- 약10X4cm(의자에 앉은 소녀상)
+- 약 13X12cm(평화비/받침대)
+- 
+- 구성
+- 소녀상 1개(의자에 앉은 소녀상), 빈의자 1개, 평화비(받침대) 1개, 안내책 1권(28p)
 modified_at:
 created_at:
 featured: https://wwm3.s3.ap-northeast-2.amazonaws.com/stores/작은+소녀상(작은+평화비)/26_작은소녀상+(1)r.jpg
-price: 
+price: 25,000원
 buying_link: https://docs.google.com/forms/d/e/1FAIpQLSc9nedLjpcX4QsqHfsDClSUvnY_z8JjKZMrkfDJmnqozNUliA/viewform
 components:
-- https://wwm3.s3.ap-northeast-2.amazonaws.com/stores/작은+소녀상(작은+평화비)/26_작은소녀상+(1)r.jpg
-- https://wwm3.s3.ap-northeast-2.amazonaws.com/stores/작은+소녀상(작은+평화비)/26_작은소녀상+(2)r.jpg
-- https://wwm3.s3.ap-northeast-2.amazonaws.com/stores/작은+소녀상(작은+평화비)/26_작은소녀상+(3)r.jpg
-- https://wwm3.s3.ap-northeast-2.amazonaws.com/stores/작은+소녀상(작은+평화비)/26_작은소녀상+(4)r.jpg
-- https://wwm3.s3.ap-northeast-2.amazonaws.com/stores/작은+소녀상(작은+평화비)/26_작은소녀상+(5)r.jpg
-- https://wwm3.s3.ap-northeast-2.amazonaws.com/stores/작은+소녀상(작은+평화비)/26_작은소녀상+(6)r.jpg
-- https://wwm3.s3.ap-northeast-2.amazonaws.com/stores/작은+소녀상(작은+평화비)/26_작은소녀상+(7)r.jpg
 - https://wwm3.s3.ap-northeast-2.amazonaws.com/stores/작은+소녀상(작은+평화비)/26_작은소녀상+(8)r.jpg
+- https://wwm3.s3.ap-northeast-2.amazonaws.com/stores/작은+소녀상(작은+평화비)/26_작은소녀상+(7)r.jpg
+- https://wwm3.s3.ap-northeast-2.amazonaws.com/stores/작은+소녀상(작은+평화비)/26_작은소녀상+(6)r.jpg
+- https://wwm3.s3.ap-northeast-2.amazonaws.com/stores/작은+소녀상(작은+평화비)/26_작은소녀상+(5)r.jpg
+- https://wwm3.s3.ap-northeast-2.amazonaws.com/stores/작은+소녀상(작은+평화비)/26_작은소녀상+(4)r.jpg
+- https://wwm3.s3.ap-northeast-2.amazonaws.com/stores/작은+소녀상(작은+평화비)/26_작은소녀상+(3)r.jpg
+- https://wwm3.s3.ap-northeast-2.amazonaws.com/stores/작은+소녀상(작은+평화비)/26_작은소녀상+(2)r.jpg
+- https://wwm3.s3.ap-northeast-2.amazonaws.com/stores/작은+소녀상(작은+평화비)/26_작은소녀상+(1)r.jpg
 tags:
 -
 ---
