--- a/content/guide/stores/작은 소녀상(작은 평화비)/26_작은소녀상 (1)r.md
+++ b/content/guide/stores/작은 소녀상(작은 평화비)/26_작은소녀상 (1)r.md
@@ -4,15 +4,13 @@ media_type:
 title: 작은 소녀상(작은 평화비)
 summary:
 image:
-description: 
-- 작은 소녀상(Peace Statue/平和少女像)
-- 
-- 크기
-- 약10X4cm(의자에 앉은 소녀상)
-- 약 13X12cm(평화비/받침대)
-- 
-- 구성
-- 소녀상 1개(의자에 앉은 소녀상), 빈의자 1개, 평화비(받침대) 1개, 안내책 1권(28p)
+description: | 
+  작은 소녀상(Peace Statue/平和少女像) \\
+  크기 \
+  약10X4cm(의자에 앉은 소녀상) \
+  약 13X12cm(평화비/받침대) \\
+  구성 \
+  소녀상 1개(의자에 앉은 소녀상), 빈의자 1개, 평화비(받침대) 1개, 안내책 1권(28p) \
 modified_at:
 created_at:
 featured: https://wwm3.s3.ap-northeast-2.amazonaws.com/stores/작은+소녀상(작은+평화비)/26_작은소녀상+(1)r.jpg
