--- a/content/guide/stores/작은 소녀상(작은 평화비)/26_작은소녀상 (1)r.md
+++ b/content/guide/stores/작은 소녀상(작은 평화비)/26_작은소녀상 (1)r.md
@@ -3,7 +3,7 @@ reference_code:
 media_type:
 title: 작은 소녀상(작은 평화비)
 summary:
-image:
+image: https://wwm3.s3.ap-northeast-2.amazonaws.com/stores/작은+소녀상(작은+평화비)/26_작은소녀상+(8)r.jpg
 description:
 modified_at:
 created_at:
@@ -22,11 +22,14 @@ components:
 tags:
 -
 ---
+
 작은 소녀상(Peace Statue/平和少女像)
 
-크기
+\
+크기 \
 의자에 앉은 소녀상: 약 10X4cm
 평화비 받침대: 약 13X12cm
 
-구성
+\
+구성\
 소녀상 1개(의자에 앉은 소녀상), 빈의자 1개, 평화비 받침대 1개, 안내책 1권(28p)
