--- a/content/learning-and-research/programs/6.md
+++ b/content/learning-and-research/programs/6.md
@@ -4,11 +4,11 @@ image: /images/@education-program.png
 date: 2021-08-23T20:36:03+09:00
 application_end_date: 2021-11-02 ~ 2021-11-15
 contact_type: 온라인/추첨
-course_target: 어린이 및 일반인
-course_time: 14:00 ~ 16:00
-course_member: 20명
-course_contact: 02-0000-0000
-course_materials: files/intro.pdf
+program_target: 어린이 및 일반인
+program_time: 14:00 ~ 16:00
+program_member: 20명
+program_contact: 02-0000-0000
+program_materials: files/intro.pdf
 apply_link: https://stage.womenandwarmuseum.net/connect/notice/1/
 summary: 그날의 목소리에서는 일본군성노예제 피해자로 숨죽여 살아왔던 김학순의 시간, 용기 있는 첫 발걸음이 나오기까지 국내외 사회적 배경, 공개증언 이후 당당한 여성인권운동가로 우뚝 선 김학순의 활동을 살펴보실 수 있습니다. 더불어 그가 일으킨 파장과 공명의 효과, 함께 또는 뒤따라 걸었던 수많은 피해생존자와 평화를 염원하는 전 세계 시민들의 자취를 확인하는 시간이 될 것입니다.
 author: 교육팀
