--- a/content/guide/stores/작은 소녀상(작은 평화비)/26_작은소녀상 (1)r.md
+++ b/content/guide/stores/작은 소녀상(작은 평화비)/26_작은소녀상 (1)r.md
@@ -23,13 +23,15 @@ tags:
 -
 ---
 
-작은 소녀상(Peace Statue/平和少女像)
+**작은 소녀상/Peace Statue/平和少女像)**
 
 \
-크기 \
-의자에 앉은 소녀상: 약 10X4cm
+[크기]\
+의자에 앉은 소녀상: 약 10X4cm\
 평화비 받침대: 약 13X12cm
 
 \
-구성\
-소녀상 1개(의자에 앉은 소녀상), 빈의자 1개, 평화비 받침대 1개, 안내책 1권(28p)
+[구성]\
+소녀상 1개(의자에 앉은 소녀상)\
+빈의자 1개, 평화비 받침대 1개\
+안내책 1권(28p)
