--- a/content/guide/stores/(도서)나의 마음은 지지 않았다/08_나의마음은지지않았다 (1)r.md
+++ b/content/guide/stores/(도서)나의 마음은 지지 않았다/08_나의마음은지지않았다 (1)r.md
@@ -8,7 +8,7 @@ description:
 modified_at:
 created_at:
 featured: https://wwm3.s3.ap-northeast-2.amazonaws.com/stores/(도서)나의+마음은+지지+않았다/08_나의마음은지지않았다+(1)r.jpg
-price: 
+price: 15,000
 buying_link: https://docs.google.com/forms/d/e/1FAIpQLSc9nedLjpcX4QsqHfsDClSUvnY_z8JjKZMrkfDJmnqozNUliA/viewform
 components:
 - https://wwm3.s3.ap-northeast-2.amazonaws.com/stores/(도서)나의+마음은+지지+않았다/08_나의마음은지지않았다+(1)r.jpg
