--- a/content/guide/stores/(도서)소녀 이야기/03_소녀이야기 (1)r.md
+++ b/content/guide/stores/(도서)소녀 이야기/03_소녀이야기 (1)r.md
@@ -8,7 +8,7 @@ description:
 modified_at:
 created_at:
 featured: https://wwm3.s3.ap-northeast-2.amazonaws.com/stores/(도서)소녀+이야기/03_소녀이야기+(1)r.jpg
-price: 
+price: 13,000
 buying_link: https://docs.google.com/forms/d/e/1FAIpQLSc9nedLjpcX4QsqHfsDClSUvnY_z8JjKZMrkfDJmnqozNUliA/viewform
 components:
 - https://wwm3.s3.ap-northeast-2.amazonaws.com/stores/(도서)소녀+이야기/03_소녀이야기+(1)r.jpg
