--- a/content/guide/stores/(도서)천번의 수요일(사진집)/01_천번의수요일 (1)r.md
+++ b/content/guide/stores/(도서)천번의 수요일(사진집)/01_천번의수요일 (1)r.md
@@ -8,7 +8,7 @@ description:
 modified_at:
 created_at:
 featured: https://wwm3.s3.ap-northeast-2.amazonaws.com/stores/(도서)천번의+수요일(사진집)/01_천번의수요일+(1)r.jpg
-price: 
+price: 10,000원
 buying_link: https://docs.google.com/forms/d/e/1FAIpQLSc9nedLjpcX4QsqHfsDClSUvnY_z8JjKZMrkfDJmnqozNUliA/viewform
 components:
 - https://wwm3.s3.ap-northeast-2.amazonaws.com/stores/(도서)천번의+수요일(사진집)/01_천번의수요일+(1)r.jpg
@@ -21,3 +21,7 @@ components:
 tags:
 -
 ---
+**천번의 수요일(사진집)/Photo collection - Thousand Wednesday/写真集 「千回の水曜日」**
+
+[크기]\
+14.3cm(가로)X16.3cm(세로)
