--- a/content/guide/stores/(도서)하루가 천금이지/04_하루가천금이지 (1)r.md
+++ b/content/guide/stores/(도서)하루가 천금이지/04_하루가천금이지 (1)r.md
@@ -8,7 +8,7 @@ description:
 modified_at:
 created_at:
 featured: https://wwm3.s3.ap-northeast-2.amazonaws.com/stores/(도서)하루가+천금이지/04_하루가천금이지+(1)r.jpg
-price: 
+price: 10,000원
 buying_link: https://docs.google.com/forms/d/e/1FAIpQLSc9nedLjpcX4QsqHfsDClSUvnY_z8JjKZMrkfDJmnqozNUliA/viewform
 components:
 - https://wwm3.s3.ap-northeast-2.amazonaws.com/stores/(도서)하루가+천금이지/04_하루가천금이지+(1)r.jpg
