--- a/content/guide/stores/(도서)희망으로 다시 쓰는 역사/02_희망으로쓰는역사 (4)r.md
+++ b/content/guide/stores/(도서)희망으로 다시 쓰는 역사/02_희망으로쓰는역사 (4)r.md
@@ -8,7 +8,7 @@ description:
 modified_at:
 created_at:
 featured: https://wwm3.s3.ap-northeast-2.amazonaws.com/stores/(도서)희망으로+다시+쓰는+역사/1.+희망으로.png
-price: 
+price: 10,000
 buying_link: https://docs.google.com/forms/d/e/1FAIpQLSc9nedLjpcX4QsqHfsDClSUvnY_z8JjKZMrkfDJmnqozNUliA/viewform
 components:
 - https://wwm3.s3.ap-northeast-2.amazonaws.com/stores/(도서)희망으로+다시+쓰는+역사/02_희망으로쓰는역사+(4)r.jpg
