--- a/content/guide/stores/2022 스케줄러/20211022-플래너_내지컬러_32P_인쇄 (2)_12.md
+++ b/content/guide/stores/2022 스케줄러/20211022-플래너_내지컬러_32P_인쇄 (2)_12.md
@@ -8,7 +8,7 @@ description:
 modified_at:
 created_at:
 featured: https://wwm3.s3.ap-northeast-2.amazonaws.com/stores/2022+스케줄러/박물관+다이어리.jpg
-price: 
+price: 10,000원
 buying_link: https://docs.google.com/forms/d/e/1FAIpQLSc9nedLjpcX4QsqHfsDClSUvnY_z8JjKZMrkfDJmnqozNUliA/viewform
 components:
 - https://wwm3.s3.ap-northeast-2.amazonaws.com/stores/2022+스케줄러/20211022-플래너_내지컬러_32P_인쇄+(2)_12.jpg
@@ -20,3 +20,4 @@ components:
 tags:
 -
 ---
+판매 수익금은 일본군성노예제문제해결을 위한 국내·외 활동, 수요시위, 교육·장학사업, 피해자지원, 기림사업, 연구 조사, 박무관 운영 사업을 위해 쓰입니다.
