--- a/content/guide/stores/나비 배지(침형, 자석형)/14_브로치1 (1)r.md
+++ b/content/guide/stores/나비 배지(침형, 자석형)/14_브로치1 (1)r.md
@@ -8,7 +8,7 @@ description:
 modified_at:
 created_at:
 featured: https://wwm3.s3.ap-northeast-2.amazonaws.com/stores/나비+배지(침형,+자석형)/14_브로치1+(1)r.jpg
-price: 
+price: 침형(Pin) 1,500원, 자석형(Magnetic) 2,000원
 buying_link: https://docs.google.com/forms/d/e/1FAIpQLSc9nedLjpcX4QsqHfsDClSUvnY_z8JjKZMrkfDJmnqozNUliA/viewform
 components:
 - https://wwm3.s3.ap-northeast-2.amazonaws.com/stores/나비+배지(침형,+자석형)/14_브로치1+(1)r.jpg
@@ -18,3 +18,7 @@ components:
 tags:
 -
 ---
+**나비뱃지／Butterfly Button／蝶バッチ**
+
+[크기]／
+2cm X 1.5cm (큰 날개길이 X 세로 길이)
