--- a/content/guide/stores/나비 자수 장갑/장갑.md
+++ b/content/guide/stores/나비 자수 장갑/장갑.md
@@ -1,17 +1,23 @@
 ---
 reference_code:
 media_type:
-title: 나비 자수 장갑
+title: 나비 자수 기모 장갑(스마트폰 터치)
 summary:
 image:
 description:
 modified_at:
 created_at:
 featured: https://wwm3.s3.ap-northeast-2.amazonaws.com/stores/나비+자수+장갑/장갑.png
-price: 
+price: 15,000원
 buying_link: https://docs.google.com/forms/d/e/1FAIpQLSc9nedLjpcX4QsqHfsDClSUvnY_z8JjKZMrkfDJmnqozNUliA/viewform
 components:
 - https://wwm3.s3.ap-northeast-2.amazonaws.com/stores/나비+자수+장갑/장갑.png
 tags:
 -
 ---
+[사이즈]／
+S, M, L
+
+[상세정보]／
+기모 안감
+스마트폰 터치 가능
