--- a/content/guide/stores/나비 책갈피/21_책갈피1 (1)r.md
+++ b/content/guide/stores/나비 책갈피/21_책갈피1 (1)r.md
@@ -8,7 +8,7 @@ description:
 modified_at:
 created_at:
 featured: https://wwm3.s3.ap-northeast-2.amazonaws.com/stores/나비+책갈피/21_책갈피1+(1)r.jpg
-price: 
+price: 4,000원(개별 구매 가능)
 buying_link: https://docs.google.com/forms/d/e/1FAIpQLSc9nedLjpcX4QsqHfsDClSUvnY_z8JjKZMrkfDJmnqozNUliA/viewform
 components:
 - https://wwm3.s3.ap-northeast-2.amazonaws.com/stores/나비+책갈피/21_책갈피1+(1)r.jpg
@@ -22,3 +22,8 @@ components:
 tags:
 -
 ---
+**책갈피 세트/Bookmark/しおり**
+
+[크기]／
+나비모양 - 3.7cm x 2.3cm (가로x세로)／
+원테두리 나비모양 - 2.2cm X 1.8cm (가로x세로)
