--- a/content/guide/stores/목련 포스트잇/김복동할머니 굿즈15(김고은 촬영).md
+++ b/content/guide/stores/목련 포스트잇/김복동할머니 굿즈15(김고은 촬영).md
@@ -8,7 +8,7 @@ description:
 modified_at:
 created_at:
 featured: https://wwm3.s3.ap-northeast-2.amazonaws.com/stores/목련+포스트잇/김복동할머니+굿즈15(김고은+촬영).JPG
-price: 
+price: 3,000원
 buying_link: https://docs.google.com/forms/d/e/1FAIpQLSc9nedLjpcX4QsqHfsDClSUvnY_z8JjKZMrkfDJmnqozNUliA/viewform
 components:
 - https://wwm3.s3.ap-northeast-2.amazonaws.com/stores/목련+포스트잇/김복동할머니+굿즈15(김고은+촬영).JPG
@@ -16,3 +16,11 @@ components:
 tags:
 -
 ---
+*여성인권운동가 김복동 추모와 기억전 특별전시 굿즈입니다
+
+[크기]
+표지: 10cm(가로)X10cm(세로)
+내지: 9.5cm(가로)X7.4cm(세로)
+
+[내지]
+100매
