--- a/content/guide/stores/박물관 클리어파일/클리어파일 뒷면.md
+++ b/content/guide/stores/박물관 클리어파일/클리어파일 뒷면.md
@@ -8,7 +8,7 @@ description:
 modified_at:
 created_at:
 featured: https://wwm3.s3.ap-northeast-2.amazonaws.com/stores/박물관+클리어파일/클리어파일+뒷면.jpg
-price: 
+price: 1,500원
 buying_link: https://docs.google.com/forms/d/e/1FAIpQLSc9nedLjpcX4QsqHfsDClSUvnY_z8JjKZMrkfDJmnqozNUliA/viewform
 components:
 - https://wwm3.s3.ap-northeast-2.amazonaws.com/stores/박물관+클리어파일/클리어파일+뒷면.jpg
@@ -17,3 +17,7 @@ components:
 tags:
 -
 ---
+**클리어 파일/Clear File Folder/クリアファイル**
+
+[크기]／
+22cm X 30.9cm (가로 X 세로)
