--- a/content/guide/stores/소녀 포스트잇/1 소녀 포스트잇.md
+++ b/content/guide/stores/소녀 포스트잇/1 소녀 포스트잇.md
@@ -8,7 +8,7 @@ description:
 modified_at:
 created_at:
 featured: https://wwm3.s3.ap-northeast-2.amazonaws.com/stores/소녀+포스트잇/1+소녀+포스트잇.png
-price: 
+price: 1,000원
 buying_link: https://docs.google.com/forms/d/e/1FAIpQLSc9nedLjpcX4QsqHfsDClSUvnY_z8JjKZMrkfDJmnqozNUliA/viewform
 components:
 - https://wwm3.s3.ap-northeast-2.amazonaws.com/stores/소녀+포스트잇/1+소녀+포스트잇.png
@@ -18,3 +18,6 @@ components:
 tags:
 -
 ---
+[크기]
+7.6cm X 8cm (표지, 가로 X 세로) 
+7.5cm X 7cm (내지, 가로 X 세로)
