--- a/content/guide/stores/원석 나비팔찌/팔찌1 (1)r.md
+++ b/content/guide/stores/원석 나비팔찌/팔찌1 (1)r.md
@@ -8,7 +8,7 @@ description:
 modified_at:
 created_at:
 featured: https://wwm3.s3.ap-northeast-2.amazonaws.com/stores/원석+나비팔찌/팔찌1+(1)r.jpg
-price: 
+price: 5,000원
 buying_link: https://docs.google.com/forms/d/e/1FAIpQLSc9nedLjpcX4QsqHfsDClSUvnY_z8JjKZMrkfDJmnqozNUliA/viewform
 components:
 - https://wwm3.s3.ap-northeast-2.amazonaws.com/stores/원석+나비팔찌/팔찌1+(1)r.jpg
@@ -26,3 +26,8 @@ components:
 tags:
 -
 ---
+[사이즈]
+S, M, L
+
+[옵션]
+빨강, 분홍, 하늘, 흰검, 초록, 보라, 핑크, 기타
