--- a/content/guide/stores/지문 초상 배지/13_버튼 (1)r.md
+++ b/content/guide/stores/지문 초상 배지/13_버튼 (1)r.md
@@ -8,7 +8,7 @@ description:
 modified_at:
 created_at:
 featured: https://wwm3.s3.ap-northeast-2.amazonaws.com/stores/지문+초상+배지/13_버튼+(1)r.jpg
-price: 
+price: 1,000원
 buying_link: https://docs.google.com/forms/d/e/1FAIpQLSc9nedLjpcX4QsqHfsDClSUvnY_z8JjKZMrkfDJmnqozNUliA/viewform
 components:
 - https://wwm3.s3.ap-northeast-2.amazonaws.com/stores/지문+초상+배지/13_버튼+(1)r.jpg
@@ -17,3 +17,7 @@ components:
 tags:
 -
 ---
+**지문초상뱃지/Portrait button made of finger prints/指紋の肖像 バッチ**
+
+[크기]／
+3.9cm(직경)
