--- a/content/guide/stores/천연 염색 마스크/나비 마스크.md
+++ b/content/guide/stores/천연 염색 마스크/나비 마스크.md
@@ -8,10 +8,12 @@ description:
 modified_at:
 created_at:
 featured: https://wwm3.s3.ap-northeast-2.amazonaws.com/stores/천연+염색+마스크/나비+마스크.png
-price: 
+price: 10,000원
 buying_link: https://docs.google.com/forms/d/e/1FAIpQLSc9nedLjpcX4QsqHfsDClSUvnY_z8JjKZMrkfDJmnqozNUliA/viewform
 components:
 - https://wwm3.s3.ap-northeast-2.amazonaws.com/stores/천연+염색+마스크/나비+마스크.png
 tags:
 -
 ---
+[옵션]／
+노랑, 카키, 감물, 보라, 자주, 베이지, 검정, 먹색, 흰색
