--- a/content/guide/stores/크리스탈 나비 팔찌/나비크리레드장미팔찌.md
+++ b/content/guide/stores/크리스탈 나비 팔찌/나비크리레드장미팔찌.md
@@ -8,7 +8,7 @@ description:
 modified_at:
 created_at:
 featured: https://wwm3.s3.ap-northeast-2.amazonaws.com/stores/크리스탈+나비+팔찌/나비크리레드장미팔찌.jpg
-price: 
+price: 10,000원
 buying_link: https://docs.google.com/forms/d/e/1FAIpQLSc9nedLjpcX4QsqHfsDClSUvnY_z8JjKZMrkfDJmnqozNUliA/viewform
 components:
 - https://wwm3.s3.ap-northeast-2.amazonaws.com/stores/크리스탈+나비+팔찌/나비크리레드장미팔찌.jpg
@@ -21,3 +21,5 @@ components:
 tags:
 -
 ---
+[옵션]／
+레드, 보라, 핑크, 블루, 화이트
