--- a/content/guide/stores/판화 노트/photo_2019-10-04_16-32-12.md
+++ b/content/guide/stores/판화 노트/photo_2019-10-04_16-32-12.md
@@ -8,7 +8,7 @@ description:
 modified_at:
 created_at:
 featured: https://wwm3.s3.ap-northeast-2.amazonaws.com/stores/판화+노트/photo_2019-10-04_16-32-12.jpg
-price: 
+price: 2,000원
 buying_link: https://docs.google.com/forms/d/e/1FAIpQLSc9nedLjpcX4QsqHfsDClSUvnY_z8JjKZMrkfDJmnqozNUliA/viewform
 components:
 - https://wwm3.s3.ap-northeast-2.amazonaws.com/stores/판화+노트/photo_2019-10-04_16-32-12.jpg
@@ -19,3 +19,11 @@ components:
 tags:
 -
 ---
+**노트/Note/ノート**
+
+[크기]
+표지: 14.4cm(가로)X20.8cm(세로)
+내지: 14cm(가로)X20.7cm(세로) 
+
+[상세정보]
+44p
